fixed white gap

--- a/app/styles/custom/_style.scss
+++ b/app/styles/custom/_style.scss
@@ -168,6 +168,10 @@
 }
 
 .header-offset {
-  padding-top: 180px;
   max-height: 100vh;
+  overflow: auto;
+
+  @include media-breakpoint-down(md) {
+    padding-top: 150px;
+  }
 }
